test/error/type/err5.rzy
// fail, use procedure to index array

component
  Err5
    input
      inp();
    
    output
      out();
      
    implementation elementary
    
    var
      a : Array{10,R{0,10}};
    
    function inp()
      return a[out()];
    end
    
  end

